SiteWide Font Change

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -9,7 +9,7 @@
   <!-- for bold titles -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Cabin&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Antonio:wght@700&family=Cabin&display=swap" rel="stylesheet">
 
   <script src="https://kit.fontawesome.com/639ddc9b1c.js" crossorigin="anonymous"></script>
 
